--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,20 @@
     padding: 5px;
     cursor: pointer;
 }
+
+.nav-wrapper input{
+    border-bottom: 1px #fafafa !important;
+    border-bottom-style: dashed !important;
+}
+
+.nav-wrapper .input-field .prefix{
+    right: 132px;
+    top: -5px;
+}
+.nav-wrapper a i{
+line-height: inherit;
+}
+
+.btn-login-header{
+    text-align: center;
+}
