--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,25 @@
 <nav>
   <div class="nav-wrapper">
     <a href="/" class="brand-logo right">ECOMMERCE</a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
-      <li><a>ENTRAR</a></li>
-      <li><a>CADASTRAR</a></li>
-    </ul>
+    <div id="nav-mobile" class="left hide-on-med-and-down">
+      <div class="row">
+        <div class="row">
+          <div class="input-field col s4">
+            <i class="material-icons prefix">email</i>
+            <input id="email" type="email" class="validate">
+          </div>
+          <div class="input-field col s4">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="password" type="password" class="validate">
+          </div>
+          <div class="input-field col s3 btn-login-header">
+            <a class="btn btn-small "><i class="material-icons">send</i></a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </nav>
-  
+
+
+
