Aperfeicoamento dos imputs, correcao bugs materialize, imagens, slider etc.

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -3,7 +3,6 @@
   <div class="div-cadastro">
     <app-cadastroform></app-cadastroform>
   </div>
-  <div class="div-sidebar">
+  <div class=".div-sidebar">
     <app-cadastrosidebar></app-cadastrosidebar>
-  </div>
 </div>
