--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -9,9 +9,9 @@
 }
 
 .div-cadastro{
+    padding: 10px;
     -webkit-box-shadow: 0px 0px 18px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 18px -2px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 18px -2px rgba(0,0,0,0.75);
-    width: 40%;
-    margin: auto;
+    
 }
