--- a/src/app/cadastro/cadastroform/cadastroform.component.html
+++ b/src/app/cadastro/cadastroform/cadastroform.component.html
@@ -1,3 +1,13 @@
+
+
+<div class="card red lighten-2 center">
+  <div class="card-content white-text">
+    <span class="card-title">Cadastro de usuario</span>
+  </div>
+</div>
+<div class="progress">
+    <div class="determinate" style="width: 10%"></div>
+</div>
 <div class="center">
   <form class="col s12">
     <div class="row">
@@ -17,34 +27,32 @@
         <label for="first_name">RG</label>
       </div>
       <div class="input-field col s6">
-        <input id="last_name" type="text" class="validate">
-        <label for="last_name">Sobre nome</label>
-      </div>
+          <input type="text" class="datepicker">
+          <label for="disabled">Data de nascimento</label>
+        </div>
     </div>
     <div class="row">
-      <div class="input-field col s12">
-        <input type="text" class="datepicker">
-        <label for="disabled">Data de nascimento</label>
+        <div class="input-field col s12">
+          <input id="email" type="email" class="validate">
+          <label for="email">Email</label>
+        </div>
       </div>
-    </div>
     <div class="row">
-      <div class="input-field col s12">
-        <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-        <label for="disabled">Disabled</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
+      <div class="input-field col s6">
         <input id="password" type="password" class="validate">
         <label for="password">Password</label>
       </div>
+      <div class="input-field col s6">
+          <input id="re-password" type="password" class="validate">
+          <label for="re-password">Confirmar Password</label>
+        </div>
     </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="email" type="email" class="validate">
-        <label for="email">Email</label>
-      </div>
-    </div>
+    <p>
+        <label>
+          <input type="checkbox" />
+          <span>Red</span>
+        </label>
+      </p>
   </form>
 </div>
 
