--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="header-nav">
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo center">ECOMMERCE</a>
+    <a href="#" class="brand-logo right">ECOMMERCE</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li><a href="/" >Home</a></li>
       <li><a href="entrar" >Entrar</a></li>
