--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,36 +1,19 @@
-<app-header></app-header>
-
 <div class="slider">
         <ul class="slides">
           <li>
-            <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
-            <div class="caption center-align">
-              <h3>This is our big Tagline!</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
+            <img src="https://png.pngtree.com/thumb_back/fw800/back_pic/00/01/89/25560cf970544c2.jpg"> <!-- random image -->
           </li>
           <li>
-            <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
-            <div class="caption left-align">
-              <h3>Left Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
-            <div class="caption right-align">
-              <h3>Right Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
-            <div class="caption center-align">
-              <h3>This is our big Tagline!</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
+            <img src="https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/B1eYNZGrripnnry82/on-the-table-at-library-blurred-background_srzsdgyye_thumbnail-full01.png"> <!-- random image -->
           </li>
         </ul>
+        <div class="carousel">
+            <a class="carousel-item" href="#one!"><img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400_o-picapau-amarelo.jpg"></a>
+            <a class="carousel-item" href="#two!"><img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400_o-comprador-de-fazendas.jpg"></a>
+            <a class="carousel-item" href="#three!"><img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400_a-hidra-de-lerna.jpg"></a>
+            <a class="carousel-item" href="#four!"><img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400_o-leao-de-nemeia.jpg"></a>
+            <a class="carousel-item" href="#five!"><img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/4906_resized_150x200.jpg"></a>
+        </div>
       </div>
       
 <app-produtogrid></app-produtogrid>
