Melhorias no site, e dependencias do materialize

--- a/src/app/produtogrid/produtogrid.component.html
+++ b/src/app/produtogrid/produtogrid.component.html
@@ -1,100 +1,231 @@
-<h2>PRODUTOS</h2>
-<div class="row col s12 m12 l12 left">
-  <div class="col s3 m3 l3">
-    <div class="card">
-      <div class="card-image">
-        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/13200613_resized_150x200.jpg">
-        <span class="card-title">Produto Titulo</span>
-        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-      </div>
-      <div class="card-content">
-        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-      </div>
+<nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo left">PRODUTOS</a>
     </div>
-  </div>
-  <div class="col s3 m3 l3">
-      <div class="card">
-        <div class="card-image">
-          <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/4878_resized_150x200.jpg">
-          <span class="card-title">Produto Titulo</span>
-          <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-        </div>
-        <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col s3 m3 l3">
-        <div class="card">
-          <div class="card-image">
-            <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/4906_resized_150x200.jpg">
-            <span class="card-title">Produto Titulo</span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-          </div>
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s3 m3 l3">
-          <div class="card">
-            <div class="card-image">
-              <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/5309_resized_150x200.jpg">
-              <span class="card-title">Produto Titulo</span>
-              <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s3 m3 l3">
-            <div class="card">
-              <div class="card-image">
-                <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/11519081_resized_148x200.jpg">
-                <span class="card-title">Produto Titulo</span>
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s3 m3 l3">
-              <div class="card">
-                <div class="card-image">
-                  <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/11604000CJ_resized_149x200.jpg">
-                  <span class="card-title">Produto Titulo</span>
-                  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-                </div>
-                <div class="card-content">
-                  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col s3 m3 l3">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/11687310CJM_resized_150x199.jpg">
-                    <span class="card-title">Produto Titulo</span>
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-                  </div>
-                  <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                  </div>
-                </div>
-              </div>  <div class="col s3 m3 l3">
-                  <div class="card">
+  </nav>
+<div class="fixed-action-btn \">
+    <a class="btn-floating btn-large red">
+    <i class="large material-icons ">shopping_cart</i>
+    </a>
+    <ul>
+       <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+       <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+       <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+       <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+ </div>
+ <ul class="collapsible">
+    <li class="active">
+       <div class="collapsible-header">
+          <i class="material-icons">trending_up</i>
+            PRODUTOS MAIS VENDIDOS
+          <span class="new badge">4</span>
+       </div>
+       <div class="collapsible-body">
+          <div class="row col s12 m12 l12 left">
+              <div class="col s3 m3 l3">
+                 <div class="card">
                     <div class="card-image">
-                      <img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400__his9.jpg">
-                      <span class="card-title">Produto Titulo</span>
-                      <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                       <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/13200613_resized_150x200.jpg">
+                       <span class="card-title">Produto Titulo</span>
+                       <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                     </div>
                     <div class="card-content">
-                      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                       <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
                     </div>
+                 </div>
+              </div>
+              <div class="col s3 m3 l3">
+                 <div class="card">
+                    <div class="card-image">
+                       <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/4906_resized_150x200.jpg">
+                       <span class="card-title">Produto Titulo</span>
+                       <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                       <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                 </div>
+              </div>
+              <div class="col s3 m3 l3">
+                 <div class="card">
+                    <div class="card-image">
+                       <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/5309_resized_150x200.jpg">
+                       <span class="card-title">Produto Titulo</span>
+                       <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                       <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                 </div>
+              </div>
+              <div class="col s3 m3 l3">
+                 <div class="card">
+                    <div class="card-image">
+                       <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/11519081_resized_148x200.jpg">
+                       <span class="card-title">Produto Titulo</span>
+                       <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                       <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                 </div>
+              </div>
+              <div class="col s3 m3 l3">
+                 <div class="card">
+                    <div class="card-image">
+                       <img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400__his9.jpg">
+                       <span class="card-title">Produto Titulo</span>
+                       <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                       <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                 </div>
+              </div>
+           </div>
+       </div>
+    </li>
+    <li>
+        <div class="collapsible-header">
+           <i class="material-icons">fiber_new</i>
+           NOVOS PRODUTOS
+           <span class="new badge">4</span>
+        </div>
+        <div class="collapsible-body">
+           <div class="row col s12 m12 l12 left">
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/13200613_resized_150x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
                   </div>
-                </div>
-  
-</div>
-
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/4906_resized_150x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/5309_resized_150x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/11519081_resized_148x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400__his9.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+        </div>
+     </li>
+     <li>
+        <div class="collapsible-header">
+           <i class="material-icons">monetization_on</i>
+           PRODUTOS COM DESCONTO
+           <span class="new badge">4</span>
+        </div>
+        <div class="collapsible-body">
+           <div class="row col s12 m12 l12 left">
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/13200613_resized_150x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/4906_resized_150x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/5309_resized_150x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="https://s3-us-west-2.amazonaws.com/catalogo.ftd.com.br/files/uploads/11519081_resized_148x200.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col s3 m3 l3">
+                  <div class="card">
+                     <div class="card-image">
+                        <img src="http://catalogo.ftd.com.br.s3.amazonaws.com/280x400__his9.jpg">
+                        <span class="card-title">Produto Titulo</span>
+                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                     </div>
+                     <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+        </div>
+     </li>
+ </ul>
