--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -2,13 +2,14 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
-    
 }
 .div-sidebar{
     width: 50%;
 }
 
 .div-cadastro{
+    background-color: white;
+    width: 50%;
     padding: 10px;
     -webkit-box-shadow: 0px 0px 18px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 18px -2px rgba(0,0,0,0.75);
