--- a/src/app/cadastro/cadastroform/cadastroform.component.html
+++ b/src/app/cadastro/cadastroform/cadastroform.component.html
@@ -12,38 +12,38 @@
   <form class="col s12">
     <div class="row">
       <div class="input-field col s6">
-        <input placeholder="Placeholder" id="first_name" type="text" class="validate" data-length="10">
+        <input placeholder="Placeholder" id="first_name" type="text" class="validate character-counter" data-length="10">
         <label for="first_name">Nome</label>
       </div>
       <div class="input-field col s6">
-        <input id="last_name" type="text" class="validate">
+        <input id="last_name" type="text" class="validate character-counter" data-length="10">
         <label for="last_name">Sobre nome</label>
       </div>
     </div>
 
     <div class="row">
       <div class="input-field col s6">
-        <input placeholder="Placeholder" id="first_name" type="text" class="validate" data-length="10">
+        <input placeholder="Placeholder" id="first_name" type="text" class="validate character-counter" data-length="10">
         <label for="first_name">RG</label>
       </div>
       <div class="input-field col s6">
-          <input type="text" class="datepicker">
+          <input type="text" class="datepicker character-counter" data-length="10">
           <label for="disabled">Data de nascimento</label>
         </div>
     </div>
     <div class="row">
         <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
+          <input id="email" type="email" class="validate character-counter" data-length="10">
           <label for="email">Email</label>
         </div>
       </div>
     <div class="row">
       <div class="input-field col s6">
-        <input id="password" type="password" class="validate">
+        <input id="password" type="password" class="validate character-counter" data-length="10">
         <label for="password">Password</label>
       </div>
       <div class="input-field col s6">
-          <input id="re-password" type="password" class="validate">
+          <input id="re-password" type="password" class="validate character-counter" data-length="10">
           <label for="re-password">Confirmar Password</label>
         </div>
     </div>
@@ -55,7 +55,3 @@
       </p>
   </form>
 </div>
-
-<script>
-
-       </script>
