--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,9 +2,9 @@
   <div class="nav-wrapper">
     <a href="#" class="brand-logo right">ECOMMERCE</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
-      <li><a href="/" >Home</a></li>
-      <li><a href="entrar" >Entrar</a></li>
-      <li><a href="cadastro" >Cadastrar</a></li>
+      <li><a [routerLink]="['/']">Home</a></li>
+      <li><a [routerLink]="['entrar']">Entrar</a></li>
+      <li><a [routerLink]="['cadastro']">Cadastrar</a></li>
     </ul>
   </div>
 </nav>
